--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -62,7 +62,7 @@
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Blueprints/MainMenu/MainMenuMap.MainMenuMap
+EditorStartupMap=/Game/Maps/0_Tutorial.0_Tutorial
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
