--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -142,7 +142,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Look Up / Down Mouse",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="Side Steps",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="Side Steps",Scale=-1.000000,Key=A)
-+AxisMappings=(AxisName="Side Steps",Scale=2.000000,Key=W)
++AxisMappings=(AxisName="Forward / Backward",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="Forward / Backward",Scale=-1.000000,Key=S)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
