map dress update

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -62,7 +62,7 @@
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/0_Tutorial.0_Tutorial
+EditorStartupMap=/Game/Maps/0_Ice.0_Ice
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
